syntax = "proto3";

package data_nexus;

option go_package = "github.com/haze518/data-nexus/proto";

service MetricsService {
  rpc IngestMetric(Metric) returns (IngestResponse);
  rpc IngestMetrics(BatchMetrics) returns (BatchIngestResponse);
}

message Metric {
    string name = 1;
    double value = 2;
    string type = 3;
    int64 timestamp = 4;
    map<string, string> labels = 5;
}

message BatchMetrics {
  repeated Metric metrics = 1;
}

message IngestResponse {
    string eventId = 1;
}

message BatchIngestResponse {
  repeated string eventIds = 1;
}
